[gd_scene load_steps=4 format=3 uid="uid://b6w315bjy3hmb"]

[ext_resource type="Texture2D" uid="uid://7txrcp0uprg6" path="res://stick-figure.png" id="1_ej568"]
[ext_resource type="Texture2D" uid="uid://b2xjibihl1fnu" path="res://opponent.png" id="2_kgm1t"]
[ext_resource type="Script" path="res://game_logic.gd" id="3_2dhfq"]

[node name="MainScene" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 647.0

[node name="PlayerArea" type="Node2D" parent="."]

[node name="StickFigure" type="Sprite2D" parent="PlayerArea"]
position = Vector2(256, 258)
scale = Vector2(0.692308, 0.621667)
texture = ExtResource("1_ej568")

[node name="Score" type="Label" parent="PlayerArea"]
offset_left = 437.0
offset_top = 14.0
offset_right = 477.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="PlayerArea"]
offset_left = 174.0
offset_top = 505.0
offset_right = 379.0
offset_bottom = 570.0

[node name="Rock" type="Button" parent="PlayerArea/Buttons"]
layout_mode = 2
text = "Rock"

[node name="Paper" type="Button" parent="PlayerArea/Buttons"]
layout_mode = 2
text = "Paper"

[node name="Scissor" type="Button" parent="PlayerArea/Buttons"]
layout_mode = 2
text = "Scissor"

[node name="GameLogic" type="Node" parent="."]
script = ExtResource("3_2dhfq")

[node name="OpponentArea" type="Node2D" parent="."]
position = Vector2(595, 10)

[node name="StickFigure" type="Sprite2D" parent="OpponentArea"]
position = Vector2(256, 235.25)
scale = Vector2(0.692308, 0.6975)
texture = ExtResource("2_kgm1t")

[node name="Score" type="Label" parent="OpponentArea"]
offset_left = 437.0
offset_top = 14.0
offset_right = 477.0
offset_bottom = 37.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "0"
horizontal_alignment = 1

[node name="MoveDisplay" type="Sprite2D" parent="OpponentArea"]

[node name="Outcome" type="Label" parent="OpponentArea/MoveDisplay"]
offset_left = 59.0
offset_top = 463.0
offset_right = 430.0
offset_bottom = 562.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PlayerArea/Buttons/Rock" to="GameLogic" method="_on_rock_pressed"]
[connection signal="pressed" from="PlayerArea/Buttons/Paper" to="GameLogic" method="_on_paper_pressed"]
[connection signal="pressed" from="PlayerArea/Buttons/Scissor" to="GameLogic" method="_on_scissor_pressed"]
